<resources>
    <string name="app_name">Terminsystem</string>
    <string name="ta_appointment_system">TAÜ Appointment System</string>
    <string name="academic_login">academic login</string>
    <string name="student_login">student login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="change_password">change password</string>
    <string name="title_activity_login_s">LoginActivityS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pick_a_date">pick a date</string>
    <string name="faculty">Faculty:</string>
    <string name="department">Department:</string>
    <string name="academic">Academic:</string>
    <string name="date">Date:</string>
    <string name="check">Check</string>
    <string name="cancel_termin" />
    <string name="password_settings" />
    <string name="termin_list" />
    <string name="termin_request" />
    <string name="terminsystem3" />
    <string name="Studentpassword_settings" />
    <string name="Studenttermin_list" />
    <string name="termin_create" />
    <string name="terminsystem2" />
    <string name="student">Student</string>
    <string-array name="faculties" />
    <string name="title_activity_login_e_x_x_x">LoginActivityEXXX</string>
    <string name="title_activity_date_sending">dateSendingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_for_an_appointment">search for an appointment</string>
    <string name="my_appointments">my appointments</string>
</resources>