<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentAppointment">

    <Spinner
        android:id="@+id/facultySpinner"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="40dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/departmentSpinner"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="40dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/academicSpinner"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="40dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/appointmentDate"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="346dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pick_a_date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/academicSpinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="59dp"
        android:text="@string/faculty"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/facultySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="56dp"
        android:text="@string/department"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/departmentSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="17dp"
        android:text="@string/academic"
        app:layout_constraintEnd_toStartOf="@+id/academicSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="345dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/appointmentDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/checkAppointmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="274dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="265dp"
        android:background="#54AFBC"
        android:text="@string/check"
        app:backgroundTint="#54AFBC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentDate" />
</androidx.constraintlayout.widget.ConstraintLayout>