<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tau"
    tools:context=".Presenter.StudentHomeScreenActivity">




    <Button
        android:id="@+id/termin_create_button"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="91dp"
        android:text="@string/search_for_an_appointment"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="#54AFBC"
        android:onClick="searchAppointment"
        android:layout_centerHorizontal="true"

        app:layout_constraintBottom_toTopOf="@+id/Studenttermin_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
        android:id="@+id/Studenttermin_list_button"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:layout_marginTop="250dp"
        android:text="@string/my_appointments"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="#54AFBC"
        android:layout_centerHorizontal="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="listStudentAppointments"

         />

    <Button
        android:id="@+id/Studentpassword_settings_button"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:layout_marginTop="400dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="#54AFBC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerHorizontal="true"

        android:onClick="changeStudentPassword"
/>



</RelativeLayout>