<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="7dp"
        android:background="#00000000"
        android:text="@string/ta_appointment_system"
        android:textAlignment="center"
        android:textColor="#FE5C36"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"

        android:layout_marginBottom="137dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/TextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="38dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="315dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:text="@string/login"
        app:backgroundTint="#54AFBC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>